--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-select": "^5.10.1",
     "react-switch": "^7.1.0",
     "zod": "^3.24.2"
   },
